--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
                         <div class="footer-left">
 
                             <div class="notecard">
-                                <p id="notecard" contenteditable="true">zhihu.blog </p>
+                                <p id="notecard" contenteditable="true">知乎笔记卡片生成器<br>zhihu.blog </p>
                             </div>
                         </div>
                         <!-- QR Code -->
