--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                         <div class="footer-left">
 
                             <div class="notecard">
-                                <p id="notecard" contenteditable="true">知乎笔记卡片生成器<br>zhihu.blog </p>
+                                <p id="notecard" contenteditable="true">知乎笔记卡片生成器<br>知乎博客zhihu.blog更多惊喜 </p>
                             </div>
                         </div>
                         <!-- QR Code -->
