--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                         <div class="footer-left">
 
                             <div class="notecard">
-                                <p id="notecard" contenteditable="true">知乎笔记卡片生成器<br>知乎博客zhihu.blog更多惊喜 </p>
+                                <p id="notecard" contenteditable="true">知乎笔记卡片生成器<br>知乎博客zhihu.blog </p>
                             </div>
                         </div>
                         <!-- QR Code -->
@@ -96,7 +96,7 @@
                     </div>
 </div>
             </div>
-            <a id="github" href="https://zhihu.blog" title="了解更多关于笔记卡片网站的信息" target="_blank">知乎博客</a>
+            <a id="github" href="https://zhihu.blog" title="了解更多关于笔记卡片网站的信息" target="_blank">知乎博客 zhihu.blog 更多惊喜</a>
         </div>
 
         <!-- Right Side Settings (No Change Needed) -->
