--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,8 @@
       gtag('config', 'G-JC9W1LPWH9');
     </script>
 
-
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"KjyuVdRz6TfBiNV2",ck:"KjyuVdRz6TfBiNV2"})</script>
 
 
 </head>
